--- a/IngresoPedidos/Views/EditarView.xaml
+++ b/IngresoPedidos/Views/EditarView.xaml
@@ -5,60 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:IngresoPedidos.Views"
         mc:Ignorable="d"
-        Title="EDITAR REGISTRO 1234567A-00" Height="320" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <ToolBar Margin="7,0,10,0" VerticalAlignment="Top" Padding="0">
-            <Button Command="Cut" ToolTip="Cortar selección al Portapapeles">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/save.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                </StackPanel>
-            </Button>
-            <!--<Button Command="Paste" ToolTip="Pegar desde el Portapapeles">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/delete.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                </StackPanel>
-            </Button>-->
-            <!--<Separator/>-->
-            <Button Command="Copy" ToolTip="Copiar selección al Portapapeles">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/rubberstamp256.png" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                </StackPanel>
-            </Button>
-            <!--<Button Command="Cut" ToolTip="Corta la selección al Portapapeles">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/cut.ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                </StackPanel>
-            </Button>-->
-            <!--<Button Command="Paste" ToolTip="Pegar desde el Portapapeles">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/128 (12).ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                </StackPanel>
-            </Button>-->
-            <!--<Separator/>-->
-            <Button Command="Paste" ToolTip="Agregar a lista personalizada">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/IngresoPedidos;component/Resources/128 (16).ico" Width="48" Height="48" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                </StackPanel>
-            </Button>
-        </ToolBar>
+        Title="EDITAR PEDIDO 1234567A-00" Height="172" Width="720" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Grid Margin="10">
+        <Label Content="PEDIDO" Margin="4,0,0,38" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="100" Height="15" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+        <Label Content="ARTICULO" Margin="340,0,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="63" HorizontalAlignment="Left"/>
+        <Label Content="MODELO" Margin="105,3,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="115" HorizontalAlignment="Left"/>
+        <Label Content="PRODUCTO" Margin="220,3,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="115" HorizontalAlignment="Left"/>
+        <Label Content="CANTIDAD" Margin="408,0,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="54" HorizontalAlignment="Left"/>
+        <Label Content="ORIGINAL" Margin="588,0,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="96" HorizontalAlignment="Left"/>
+        <Label Content="ESTADO" Margin="473,3,0,0" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="110" HorizontalAlignment="Left"/>
+        <TextBox Height="26" TextWrapping="Wrap" Text="1234567A-00" VerticalAlignment="Top" Width="96" Margin="4,20,0,0" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Left"/>
+        <TextBox Height="26" Margin="340,20,0,0" TextWrapping="Wrap" Text="4885" VerticalAlignment="Top" Width="63" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14" HorizontalAlignment="Left"/>
+        <ComboBox Style="{x:Null}" Margin="220,20,0,0" VerticalAlignment="Top" Width="115" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Height="26" HorizontalAlignment="Left"/>
+        <ComboBox Style="{x:Null}" Margin="467,20,0,0" VerticalAlignment="Top" Width="115" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" HorizontalAlignment="Left"/>
+        <TextBox Height="26" Margin="408,20,0,0" TextWrapping="Wrap" Text="1000" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="54" HorizontalAlignment="Left"/>
+        <TextBox Height="26" Margin="587,20,0,0" TextWrapping="Wrap" Text="1234568A-00" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" HorizontalAlignment="Left" Width="97"/>
+        <ComboBox Style="{x:Null}" Margin="105,20,0,0" VerticalAlignment="Top" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Width="110" HorizontalAlignment="Left"/>
+        <Button ToolTip="Cortar selección al Portapapeles" VerticalAlignment="Top" Margin="632,61,0,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" HorizontalAlignment="Left">
+            <Image Source="/IngresoPedidos;component/Resources/save.ico" Width="48" Height="48" VerticalAlignment="Top" HorizontalAlignment="Left"  />
+        </Button>
+        <Button ToolTip="Agregar a lista personalizada" IsEnabled="False" VerticalAlignment="Top" Margin="575,61,0,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="{x:Null}" HorizontalAlignment="Left">
+            <Image Source="/IngresoPedidos;component/Resources/128 (16).ico" Width="48" Height="48" VerticalAlignment="Top" HorizontalAlignment="Left" />
+        </Button>
 
-        <Grid Background="#FFA9D1F4" Height="61" Margin="10,64,10,0" VerticalAlignment="Top">
-            <Label Content="PEDIDO" HorizontalAlignment="Left" Margin="4,0,0,38" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="100" Height="15" VerticalAlignment="Bottom"/>
-            <Label Content="ARTICULO" HorizontalAlignment="Left" Margin="105,0,0,38" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="63"/>
-            <Label Content="MODELO" HorizontalAlignment="Left" Margin="173,0,0,38" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="115"/>
-            <Label Content="PRODUCTO" HorizontalAlignment="Left" Margin="293,0,0,38" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="115"/>
-            <Label Content="CANTIDAD" HorizontalAlignment="Left" Margin="413,0,0,38" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="54"/>
-            <Label Content="ORIGINAL" HorizontalAlignment="Left" Margin="474,0,0,38" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" Width="96"/>
-            <Label Content="ESTADO" Margin="0,0,4,38" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="10" FontWeight="Bold" Padding="1" HorizontalAlignment="Right" Width="110"/>
-            <TextBox HorizontalAlignment="Left" Height="26" TextWrapping="Wrap" Text="1234567A-00" VerticalAlignment="Bottom" Width="96" Margin="4,8,0,7" FontFamily="Consolas" FontSize="14" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            <TextBox HorizontalAlignment="Left" Height="26" Margin="105,0,0,7" TextWrapping="Wrap" Text="4885" VerticalAlignment="Bottom" Width="63" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" FontSize="14"/>
-            <ComboBox HorizontalAlignment="Left" Margin="173,0,0,7" VerticalAlignment="Bottom" Width="115" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" Height="26"/>
-            <ComboBox HorizontalAlignment="Left" Margin="293,0,0,7" VerticalAlignment="Bottom" Width="115" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas"/>
-            <TextBox Height="26" Margin="413,0,0,7" TextWrapping="Wrap" Text="1000" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" HorizontalAlignment="Left" Width="54"/>
-            <TextBox Height="26" Margin="472,0,119,7" TextWrapping="Wrap" Text="1234568A-00" VerticalAlignment="Bottom" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas"/>
-            <ComboBox Margin="0,0,4,7" VerticalAlignment="Bottom" Height="26" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="14" FontFamily="Consolas" HorizontalAlignment="Right" Width="110"/>
-        </Grid>
-        <TextBox BorderThickness="2" BorderBrush="#FFA9D1F4" Height="74" Margin="10,127,10,0" TextWrapping="Wrap" Text="EL BOTON DE PIN APARECE SEGUN SI SE ABRIO DESDE LA LISTA PERSONALIZADA O NO. PARA PIN/UNPIN" VerticalAlignment="Top" Padding="3" FontFamily="Consolas" FontSize="14"/>
     </Grid>
 </Window>
 
