--- a/IngresoPedidos/Views/MovimientosView.xaml
+++ b/IngresoPedidos/Views/MovimientosView.xaml
@@ -12,11 +12,8 @@
         <Label Margin="95,10,0,0" Content="HORA" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="71"/>
         <Label Margin="167,10,0,0" Content="LEGAJO" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="0" HorizontalContentAlignment="Center" Height="26" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="59"/>
         <Label Margin="227,10,10,0" Content="EVENTO [ATRIBUTO] [COMENTARIO]" VerticalAlignment="Top" Background="#FFA9D1F4" FontWeight="Bold" Padding="5,0,0,0" Height="26" VerticalContentAlignment="Center"/>
-        <ListBox AlternationCount="2" Name="lbMovimientos" BorderBrush="#FFA9D1F4" SelectionMode="Extended" BorderThickness="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,41,10,10" FontFamily="Consolas"/>
-        <Button Margin="0,10,37,0" VerticalAlignment="Top" Height="26" Background="#FFA9D1F4" HorizontalAlignment="Right" Width="26"  ToolTip="Copiar selección (utilice CTRL+CLIC ó SHIFT+CLIC para seleccionar múltiples eventos)" BorderBrush="{x:Null}">
-            <Image Source="/IngresoPedidos;component/Resources/copy.ico" Width="22" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        </Button>
-        <Button Margin="0,10,10,0" VerticalAlignment="Top" Height="26" Background="#FFA9D1F4" HorizontalAlignment="Right" Width="26"  ToolTip="Guardar copia de movimientos" BorderBrush="{x:Null}">
+        <ListBox AlternationCount="2" Name="lbMovimientos" BorderBrush="#FFA9D1F4" SelectionMode="Single" SelectionChanged="LbMovimientos_SelectionChanged" BorderThickness="2" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,41,10,10" FontFamily="Consolas"/>
+        <Button Margin="0,10,10,0" VerticalAlignment="Top" Height="26" Background="{x:Null}" HorizontalAlignment="Right" Width="26"  ToolTip="Guardar copia de movimientos" BorderBrush="{x:Null}" Foreground="{x:Null}">
             <Image Source="/IngresoPedidos;component/Resources/save.ico" Width="22" Height="22" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </Button>
     </Grid>
