--- a/IngresoPedidos/App.xaml
+++ b/IngresoPedidos/App.xaml
@@ -180,9 +180,9 @@
                     <ColumnDefinition Width="15" />
                 </Grid.ColumnDefinitions>
                 <!--Borde relleno/fondo del boton-->
-                <Border x:Name="Border" Grid.ColumnSpan="2" CornerRadius="0" Background="{x:Null}" BorderBrush="{x:Null}" BorderThickness="0" />
+                <Border x:Name="Border" Grid.ColumnSpan="2" CornerRadius="0" Background="Transparent" BorderBrush="Transparent" BorderThickness="0" />
                 <!--parte del texto-->
-                <Border Grid.Column="0" CornerRadius="0" Margin="0" Background="Red" BorderBrush="{x:Null}" BorderThickness="0,0,0,0" />
+                <Border Grid.Column="0" CornerRadius="0" Margin="0" Background="Transparent" BorderBrush="Transparent" BorderThickness="0,0,0,0" />
                 <!--flecha-->
                 <Path x:Name="Arrow" Grid.Column="1" Fill="Black" HorizontalAlignment="Center" VerticalAlignment="Center" Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z" />
             </Grid>
